Prevent app crash when entering an invalid uri.